# wechat-clawbot

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  guide.md  guide.zh.md  ilink-protocol.md
specs/: backport-openclaw-weixin-2.1.1.md  gateway-design-v2.md  gateway-implementation-plan.md  hub-design.md  plan.md
src/wechat_clawbot/: __init__.py
src/wechat_clawbot/api/: client.py  config_cache.py  poll_core.py  session_guard.py  types.py
src/wechat_clawbot/auth/: accounts.py  login_qr.py  pairing.py
src/wechat_clawbot/cdn/: aes_ecb.py  cdn_url.py  download.py  upload.py
src/wechat_clawbot/claude_channel/: bridge.py  cli.py  credentials.py  server.py  setup.py
src/wechat_clawbot/config/: schema.py
src/wechat_clawbot/gateway/: __init__.py  admin.py  app.py  archive.py  auth.py  cli.py  commands.py  config.py  db.py  (+7 more)
tests/: test_accounts.py  test_admin_api.py  test_aes_ecb.py  test_archive.py  test_auth.py  test_bridge.py  test_cdn_download_url.py  test_cdn_url.py  test_client_version.py  test_commands.py  test_context_token_persistence.py  test_debug_mode.py  test_delivery_queue.py  test_endpoint_manager.py  test_gateway_config.py  test_gateway_types.py  test_health_check.py  test_http_channel.py  test_inbound.py  test_invite_manager.py  test_mime.py  test_poller_manager.py  test_random.py  test_redact.py  test_router.py  test_sdk_channel.py  test_sdk_client.py  test_send.py  test_session_guard.py  test_session_store.py  test_slash_commands.py  test_state_dir.py
(+25 files in other folders)
