[project]
name = "wechat-clawbot"
version = "0.3.0"
description = "WeChat channel plugin for OpenClaw (Python port of @tencent-weixin/openclaw-weixin)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Pan Fan", email = "nightsailer@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "cryptography>=42.0",
    "qrcode>=7.4",
    "mcp>=1.9",
]

[project.scripts]
wechat-clawbot-cc = "wechat_clawbot.claude_channel.cli:main"

[project.optional-dependencies]
silk = ["graiax-silkcoder>=0.3"]
socks = ["httpx[socks]"]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["wechat_clawbot"]
